--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
             <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam blanditiis corporis harum maxime porro quibusdam quo sequi tempore? Adipisci cumque fugiat iure quae?</p>
         </div>
         <div class="services-contained instant">
-            <img src="images/instant.png" alt="coffee">
+            <img src="images/instant.png" alt="instant">
             <h1 class="text-light">INSTANT</h1>
             <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam blanditiis corporis harum maxime porro quibusdam quo sequi tempore? Adipisci cumque fugiat iure quae?</p>
         </div>
-        <div class="services-contained serious"></div>
-        <div class="services-contained frame"></div>
+        <div class="services-contained serious">
+            <img src="images/frame.png" alt="serious">
+            <h1 class="text-light">SERIOUS</h1>
+            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam blanditiis corporis harum maxime porro quibusdam quo sequi tempore? Adipisci cumque fugiat iure quae?</p>
+        </div>
+        <div class="services-contained frame">
+            <img src="images/frame.png" alt="frame">
+            <h1 class="text-light">FRAME</h1>
+            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam blanditiis corporis harum maxime porro quibusdam quo sequi tempore? Adipisci cumque fugiat iure quae?</p>
+        </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
