--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
     <nav class="navbar">
         <div class="container-fluid">
-                <a href="#" class="navbar-brand text-light m-3 brand-perso">BLU<span class="text-primary">E</span>ASY</a>
+                <a href="#" class="navbar-brand text-light m-3 brand-perso split">BLU<span class="text-primary">E</span>ASY</a>
             <div class="d-flex navs-link-bar-perso">
                 <a href="#" class="nav-link-bar-perso nav-link active text-light">HOME</a>
                 <a href="#" class="nav-link-bar-perso nav-link active text-light">SERVICES</a>
@@ -23,11 +23,10 @@
         <h1>"I'M LOOKING FOR THE UNEXPECTED.</h1>
         <h1>I'M LOOKING FOR THE THINGS I'VE NEVER SEEN BEFORE"</h1>
     </div>
-
 </header>
 <body>
 <div class="services-container">
-    <h1 class="text-light"><span>Ser</span>vices</h1>
+    <h1 class="text-light split"><span>Ser</span>vices</h1>
     <div class="services">
         <div class="services-contained coffee">
             <img src="images/coffee.png" alt="coffee">
@@ -48,6 +47,62 @@
             <img src="images/frame.png" alt="frame">
             <h1 class="text-light">FRAME</h1>
             <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam blanditiis corporis harum maxime porro quibusdam quo sequi tempore? Adipisci cumque fugiat iure quae?</p>
+        </div>
+    </div>
+</div>
+<div class="portfolio">
+    <nav class="navbar">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand text-dark m-3 brand-perso split"><span>PORT</span>FOLIO</a>
+            <div class="d-flex navs-link-bar-perso">
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">HOME</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">SERVICES</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">FEATURES</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">PORTFOLIO</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">CONTACT</a>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid container-img">
+        <img src="images/portfolio/1.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/2.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/3.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/4.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/5.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/6.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/7.png" class="img-thumbnail" alt="...">
+        <img src="images/portfolio/8.png" class="img-thumbnail" alt="...">
+    </div>
+</div>
+<div class="default-section container-fluid">
+        <div class="text-gauche text-dark">
+            <h1 class="text-light m-3 split"><span>JUS</span>T DEFEULT SECTION</h1>
+            <p class="text-light m-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur deleniti deserunt, error exercitationem fugiat ipsam iste, libero odio odit, pariatur quae sequi voluptatibus. Accusantium beatae consectetur, expedita iure pariatur quasi reprehenderit.</p>
+            <p class="text-light m-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi exercitationem fuga fugit minus nulla reprehenderit unde. Assumenda consequatur, consequuntur, debitis error exercitationem facere illo illum incidunt ipsum nesciunt omnis.</p>
+            <button class="btn btn-outline-light">VISIT ME</button>
+        </div>
+    <iframe class="d-flex m-5" width="560" height="315" src="https://www.youtube.com/embed/kAyTAy93vBk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class="twitter">
+    <nav class="navbar">
+        <div class="container-fluid">
+            <h1 class="text-light split"><span>TWI</span>TTER</h1>
+            <div class="d-flex">
+                <img src="images/twitter.png" alt="">
+            </div>
+        </div>
+    </nav>
+
+    <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda iusto nam quae?</p>
+    <p class="text-light"><span>@Cheescake </span>tootsie roll</p>
+</div>
+
+<div class="whoIsJoe">
+    <h1 class="split text-light"><span>WH</span>O IS JOE ?</h1>
+    <div class="container-fluid">
+        <div class="container-p">
+            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ex laborum necessitatibus temporibus, voluptas voluptatem! Aliquam, dicta dolor dolorem dolores enim laborum libero nisi nostrum odit quae, quisquam ratione sapiente.</p>
+            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ex laborum necessitatibus temporibus, voluptas voluptatem! Aliquam, dicta dolor dolorem dolores enim laborum libero nisi nostrum odit quae, quisquam ratione sapiente.</p>
         </div>
     </div>
 </div>
