--- a/index.html
+++ b/index.html
@@ -99,13 +99,70 @@
 
 <div class="whoIsJoe">
     <h1 class="split text-light"><span>WH</span>O IS JOE ?</h1>
-    <div class="container-fluid">
-        <div class="container-p">
+    <div class="container">
+        <div class="container-p container-p-right">
             <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ex laborum necessitatibus temporibus, voluptas voluptatem! Aliquam, dicta dolor dolorem dolores enim laborum libero nisi nostrum odit quae, quisquam ratione sapiente.</p>
             <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ex laborum necessitatibus temporibus, voluptas voluptatem! Aliquam, dicta dolor dolorem dolores enim laborum libero nisi nostrum odit quae, quisquam ratione sapiente.</p>
         </div>
+        <div class="left container-p container-p-left">
+            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at blanditiis consequatur culpa dolorum, earum illo incidunt officia reprehenderit saepe!</p>
+            <div class="images">
+                <img src="images/social/twiter2.png" alt="">
+                <img src="images/social/googleplus.png" alt="">
+                <img src="images/social/dribble.png" alt="">
+                <img src="images/social/coffee2.png" alt="">
+            </div>
+        </div>
     </div>
 </div>
+<div class="testimonials">
+    <nav class="navbar">
+        <div class="container-fluid">
+            <h1 class="text-dark split"><span>TES</span>TIMONIALS</h1>
+            <div class="d-flex">
+                <img src="images/guillemets.png" alt="">
+            </div>
+        </div>
+    </nav>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cumque dignissimos itaque quidem. Animi deserunt distinctio, dolorum fugit id minima nemo odit quasi quidem saepe similique tenetur ut, vel voluptate?</p>
+    <p class="text-primary">-Walter White.</p>
+</div>
+<div class="contact text-light">
+    <h1 class="text-light split"><span>CON</span>TACT</h1>
+    <div class="contact-top">
+        <div class="contained-top form-contact mb-3">
+            <form method="get" action="test.php" id="msgMe">
+                <label for="exampleFormControlTextarea1" class="form-label">Name</label>
+                <input type="text" class="form-control" id="exampleFormControlTextarea1">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1">
+            </form>
+        </div>
+        <div class="contained-top contact-p">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti mollitia nostrum praesentium repudiandae. Debitis deserunt eligendi modi repudiandae tempora, tenetur unde? Delectus excepturi, id libero, magnam minus nobis odio odit quisquam, saepe similique sit sunt voluptas voluptatum! Aspernatur, consequuntur, fugiat?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae facilis fugiat impedit laborum nam perferendis quidem quis sint sunt unde, veritatis vitae! Eligendi est eveniet, id maxime modi molestias nam odit possimus recusandae, soluta ut voluptates. Architecto, deleniti?</p>
+        </div>
+    </div>
+    <div class="contained-bot">
+        <label for="Message" class="form-label">Message</label>
+        <textarea class="form-control" id="Message" rows="3"></textarea>
+    </div>
+    <button class="submit-btn" type="submit" form="msgMe">Message</button>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+<footer>
+    <nav class="navbar container-fluid">
+        <div class="text text-light">
+            <a href="#" class="nav-link">HOME |</a>
+            <a href="#" class="nav-link">SERVICES |</a>
+            <a href="#" class="nav-link">PORTFOLIO |</a>
+            <a href="#" class="nav-link">CONTACT</a>
+        </div>
+        <div class="rest">
+            <p class="text-light">2022©</p>
+        </div>
+    </nav>
+</footer>
 </html>
