--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <a href="#" class="nav-link-bar-perso nav-link active text-light">CONTACT</a>
             </div>
         </div>
+        <div class="punchline text-light">
+            <h1>"I'M LOOKING FOR THE UNEXPECTED.</h1>
+            <h1>I'M LOOKING FOR THE THINGS I'VE NEVER SEEN BEFORE"</h1>
+        </div>
     </nav>
-    <div class="punchline">
-        <h1>"I'M LOOKING FOR THE UNEXPECTED.</h1>
-        <h1>I'M LOOKING FOR THE THINGS I'VE NEVER SEEN BEFORE"</h1>
-    </div>
 </header>
 <body>
 <div class="services-container">
@@ -55,23 +55,23 @@
         <div class="container-fluid">
             <a href="#" class="navbar-brand text-dark m-3 brand-perso split"><span>PORT</span>FOLIO</a>
             <div class="d-flex navs-link-bar-perso">
-                <a href="#" class="nav-link-bar-perso nav-link active text-dark">HOME</a>
-                <a href="#" class="nav-link-bar-perso nav-link active text-dark">SERVICES</a>
-                <a href="#" class="nav-link-bar-perso nav-link active text-dark">FEATURES</a>
-                <a href="#" class="nav-link-bar-perso nav-link active text-dark">PORTFOLIO</a>
-                <a href="#" class="nav-link-bar-perso nav-link active text-dark">CONTACT</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">ALL</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">PANORAMA</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">PORTRAIT</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">PANNEAU</a>
+                <a href="#" class="nav-link-bar-perso nav-link active text-dark">JOURNAL</a>
             </div>
         </div>
     </nav>
-    <div class="container-fluid container-img">
-        <img src="images/portfolio/1.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/2.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/3.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/4.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/5.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/6.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/7.png" class="img-thumbnail" alt="...">
-        <img src="images/portfolio/8.png" class="img-thumbnail" alt="...">
+    <div class="portfolio-container container-img">
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
+        <div class="col-3 containerImg"><div class="img1"></div></div>
     </div>
 </div>
 <div class="default-section container-fluid">
